review of the text overflow issue

--- a/css/global.css
+++ b/css/global.css
@@ -11776,13 +11776,19 @@ table th, table td {
 
 @media screen and (min-width: 320px) {
   .HomepageBlock .Header-title .Header-title--primary {
-    font-size: calc(24px + 24 * (100vw - 320px) / 880);
+    font-size: calc(24px + 6 * (100vw - 320px) / 930);
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1250px) {
   .HomepageBlock .Header-title .Header-title--primary {
-    font-size: 48px;
+    font-size: 30px;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 992px) {
+  .HomepageBlock .Header-title .Header-title--primary {
+    font-size: 28px;
   }
 }
 
